--- a/main.css
+++ b/main.css
@@ -6,11 +6,11 @@ body{
 	font-family: 'baloo bhai', helvetica; 
 	max-width: 100%;
 	margin: 0 auto;
+	padding-bottom: 60px;
 }
 main{
 	max-width: 1300px;
 	margin: 0 auto;
-	/*background: linear-gradient(#FF611D, #FF5B3D);*/
 }
 
 section{
