--- a/main.css
+++ b/main.css
@@ -38,9 +38,12 @@ h3{
     margin: 33px 0px;
     width: 100%;
     text-align: center;
-
-
 }
+
+a{
+	color: black;
+}
+
 div{
 	width: 150px;
 	height: 150px;
@@ -49,6 +52,7 @@ div{
     border-radius: 100%;
     text-align: center;
     background-color: white;
+    cursor: pointer;
 }
 
 
@@ -87,7 +91,7 @@ div{
 #results h3{
 	font-size: 1em;
     margin: 0px 0px;
-    width: 165px;
+    width: 150px;
     text-align: center;
 }
 
