--- a/main.css
+++ b/main.css
@@ -1,7 +1,13 @@
+html{
+	box-sizing: border-box;
 
+}
+
+*, *:before, *:after{
+		box-sizing: inherit;
+	}
 
 body{
-	box-sizing: border-box;
 	background: linear-gradient(#E0E0E0 , #D8D8D8);
 	font-family: 'baloo bhai', helvetica; 
 	max-width: 100%;
@@ -15,7 +21,8 @@ main{
 
 section{
 	width: 98%;
-	margin: 0 auto;
+	margin: 40px auto;
+	text-align: center;
 }
 
 h1{
@@ -34,14 +41,18 @@ h2{
 	padding: 5px 0;
 }
 h3{
+	font-family: Raleway;
 	font-size: 1.5em;
-    margin: 33px 0px;
+    margin: 43px 0px;
     width: 100%;
     text-align: center;
+    white-space: nowrap;
 }
 
 a{
 	color: black;
+	text-decoration: none;
+	font-weight: bold;
 }
 
 div{
@@ -53,6 +64,9 @@ div{
     text-align: center;
     background-color: white;
     cursor: pointer;
+}
+div:hover{
+	background-color: #A6E4FF;
 }
 
 
@@ -77,7 +91,10 @@ div{
 	height: 150px;
     text-align: center;
     border: 10px solid white;
+}
 
+#results div:hover{
+	border: 10px solid #A6E4FF;
 }
 
 #results div img{
@@ -89,10 +106,12 @@ div{
 }
 
 #results h3{
-	font-size: 1em;
-    margin: 0px 0px;
-    width: 150px;
+	font-size: 1.5em;
+    margin: 10px auto;
+    width: 200px;
     text-align: center;
+    position: relative;
+    right: 31px;
 }
 
 #recipe{
@@ -134,10 +153,7 @@ div{
 		background: white;
 		padding: 18px 0;
 	}
-	h3{
-		margin-top: 32px;
-		position: relative;
-	}
+
 	#food div img{
 		top: 22px;
 	}
