--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ body{
 	margin: 0 auto;
 	padding-bottom: 60px;
 }
+
 main{
 	max-width: 1300px;
 	margin: 0 auto;
@@ -144,6 +145,8 @@ div:hover{
 	}
 	h1{
 		font-size: 10em;
+		margin: -33px;
+
 	}
 	h2{
 		text-align: center;
