--- a/main.css
+++ b/main.css
@@ -7,10 +7,14 @@ html{
 		box-sizing: inherit;
 	}
 
+html{
+	background-color: #F2F2F1;
+}
+
 body{
 	background: linear-gradient(#E0E0E0 , #D8D8D8);
 	font-family: 'baloo bhai', helvetica; 
-	max-width: 100%;
+	max-width: 1260px;
 	margin: 0 auto;
 	padding-bottom: 60px;
 }
@@ -21,7 +25,7 @@ main{
 }
 
 section{
-	width: 98%;
+	width: 97%;
 	margin: 40px auto;
 	text-align: center;
 }
@@ -33,6 +37,7 @@ h1{
     letter-spacing: 11px;
     background: #A6E4FF;
 }
+
 h2{
 	text-align: center;
 	margin-bottom: 40px;
@@ -41,6 +46,7 @@ h2{
 	background: white;
 	padding: 5px 0;
 }
+
 h3{
 	font-family: Raleway;
 	font-size: 1.5em;
@@ -48,6 +54,10 @@ h3{
     width: 100%;
     text-align: center;
     white-space: nowrap;
+}
+
+#return-home{
+	cursor: pointer;
 }
 
 a{
@@ -67,7 +77,7 @@ div{
     cursor: pointer;
 }
 div:hover{
-	background-color: #A6E4FF;
+	background-color: #FFB848;
 }
 
 
@@ -95,7 +105,7 @@ div:hover{
 }
 
 #results div:hover{
-	border: 10px solid #A6E4FF;
+	border: 10px solid #FFB848;
 }
 
 #results div img{
